Add profiling deps